# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: gendiff_auto.yml
gendiff/: __init__.py  diff.py  gendiff.py  parser.py
gendiff/formatters/: __init__.py  stylish_format.py  stylish_formatter.py
gendiff/scripts/: gendiff.py  gendiff_run.py
tests/: test_gendiff.py
tests/fixtures/: file1_nested.json  nested_json.txt
